--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,51 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-    <head>
-        <title>Email Sender POC</title>
-        <link href="/stylesheets/style.css" type="text/css" rel="stylesheet">
-    </head>
-    <body>
-        <h1>
-            <p> Welcome to MailSenderPOC</p>
-        </h1>
-    </body>
+
+<head>
+    <title>Email Sender POC</title>
+    <link href="/web/stylesheets/style.css" type="text/css" rel="stylesheet">
+    <script src="/web/javascripts/emailForm.js"></script>
+
+</head>
+
+<body onload="pageLoadEvent()">
+    <div class="form-style-3">
+        <form id="mailform" autocomplete="off" method="POST" action="/mail" onsubmit="submitForm(); return false;">
+            <fieldset>
+                <legend>Email Information</legend>
+                <ul>
+                    <li><label for="from"><span>Your name<span class="required">*</span></span></label>
+                        <input type="text" id="from" name="from" placeholder="Your good name :)" required/>
+                    </li>
+                    <li><label for="to"><span>To<span class="required">*</span></span></label>
+                        <input type="email" id="to" name="to" multiple placeholder="Separated with comma(,)" required/>
+                    </li>
+                    <li><label for="enableCC"><span>CC</span></label> <input type="checkbox" id="enableCC" onchange="handleCheckBoxChange(event)">
+                        <input type="email" id="cc" name="cc" multiple placeholder="Separate with comma(,)"/>
+                    </li>
+                    <li><label for="enableBCC"><span>BCC</span></label> <input type="checkbox" id="enableBCC" onchange="handleCheckBoxChange(event)">
+                        <input type="email" id="bcc" name="bcc" multiple placeholder="Separate with comma(,)"/>
+                    </li>
+                    <li><label for="subject"><span>Subject<span class="required">*</span></span></label> 
+                        <input type="text" id="subject" name="subject" placeholder="Regarding..." required/>
+                    </li>
+                </ul>
+            </fieldset>
+            <fieldset>
+                <legend>Message</legend>
+                <ul>
+                    <li><label for="textContent"><span>Message<span class="required">*</span></span></label> <textarea
+                        id="textContent" name="textContent" placeholder="Your message goes here..." required></textarea>
+                    </li>
+                    <li><label for="enableBCC"><span>Schedule Mail</span></label> <input type="checkbox" id="scheduleMail" name="scheduleMail" onchange="handleCheckBoxChange(event)">
+                        <input type="datetime-local" id="scheduledDate" name="scheduledDate">
+                    </li>
+                </ul>
+                <input type="reset" name="reset" value="Reset" />
+                <input type="submit" name="submit" id="submit" value="Send Mail" />
+            </fieldset>
+        </form>
+    </div>
+</body>
+
 </html>
