created scheduler for onceoff mails

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
                     <li><label for="textContent"><span>Message<span class="required">*</span></span></label> <textarea
                         id="textContent" name="textContent" placeholder="Your message goes here..." required></textarea>
                     </li>
-                    <li><label for="enableBCC"><span>Schedule Mail</span></label> <input type="checkbox" id="scheduleMail" name="scheduleMail" onchange="handleCheckBoxChange(event)">
+                    <li><label for="enableBCC"><span>Schedule Mail</span></label> <input type="checkbox" id="scheduleMail" name="scheduleMail" value="true" onchange="handleCheckBoxChange(event)">
                         <input type="datetime-local" id="scheduledDate" name="scheduledDate">
                     </li>
                 </ul>
