added winston logger and improved html client

--- a/public/index.html
+++ b/public/index.html
@@ -41,7 +41,7 @@
                         <input type="datetime-local" id="scheduledDate" name="scheduledDate">
                     </li>
                 </ul>
-                <input type="reset" name="reset" value="Reset" />
+                <input type="reset" name="reset" id="reset" value="Reset" />
                 <input type="submit" name="submit" id="submit" value="Send Mail" />
             </fieldset>
         </form>
